--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.12.0+2
+  http: ^0.13.1
   shared_preferences: ^0.5.3+1
 
 dev_dependencies:
